# python-developer

00 - python_fundamentals/: challenge-01.py
00 - python_fundamentals/module-01/: input-output.py
00 - python_fundamentals/module-02/: comparison_operators.py  identity_operators.py
00 - python_fundamentals/module-03/: indentation_and_blocks.py
00 - python_fundamentals/module-04/: multiple_line_strings.py  useful_string_methods.py  variables_interpolation.py
01 - data_structures/05 - functions/: 00_first_function.py  01_return_of_function.py  02_named_arguments.py  04_positional-only_parameters.py  05_named-only_parameters.py  07_local_and_global_scope.py
02 - object_oriented_programming/: challenge-01.py
02 - object_oriented_programming/00_classes_and_objects/: 00_first_program.py
02 - object_oriented_programming/01_constructors_and_destructors/: 00_using_constructors_destructors.py
02 - object_oriented_programming/02_inheritance/: 00_simple_inheritance.py  01_multiple_inheritance.py
02 - object_oriented_programming/03_encapsulation/: 00_encapsulation.py  02_properties_2.py
02 - object_oriented_programming/04_polymorphism/: 00_polymorphism.py
02 - object_oriented_programming/05_class_or_instance_attributes/: 00_class_instance_attributes.py
03 - python_frameworks/: app.py  integration_with_mongodb.py  integration_with_sqlalchemy.py  planilha.xlsx
06 - django_web_development/: db.sqlite3
07 - final_project/: docker-compose.yml  main.py  pyproject.toml
data_structures/: challenge-01.py
python_fundamentals/: challenge-01.py
(+132 files in other folders)
